# cusan

./: .codespellrc  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: cusanToolchain.cmake
cmake/modules/: cusan-format.cmake  cusan-llvm.cmake
lib/analysis/: CMakeLists.txt  KernelAnalysis.cpp  KernelAnalysis.h  KernelModel.cpp  KernelModel.h  ModelIO.cpp
lib/pass/: AnalysisTransform.cpp  AnalysisTransform.h  CMakeLists.txt  CommandLine.h  CusanPass.cpp  CusanPass.h  FunctionDecl.cpp  FunctionDecl.h
lib/runtime/: CMakeLists.txt  CusanRuntime.cpp  CusanRuntime.h  CusanRuntime_cudaSpecific.cpp  MPIInterception.cpp  StatsCounter.h  TSanInterface.h  TSan_External.h
lib/support/: CudaUtil.h  Logger.h  Util.h
scripts/: CMakeLists.txt  cusan-tmpl.sh.in  cusan-wrapper-no-typeart.in  cusan-wrapper.in  cusan-wrapperv2.in  cusan_wrapperv2.in
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/kernel_analysis/: 01_ptr_write.c  02_val_readwrite_ptr_read_ptr_write.c  03_struct_write.c  04_struct_ptr.c  05_struct_inside_of_struct.c  06_cuda_labmda.c  06_cuda_lambda.c  07_negative_array.c  08_big_struct_write.c
test/multi_gpu/: 01_device_sync.c  02_device_sync_event.c  TSan_External.h  lit.local.cfg
test/pass/: 01_test.c  02_event.c  03_cuda_to_mpi.c  04_mpi_to_cuda.c  05_cuda_to_mpi_stream.c  06_cuda_to_mpi_event.c  07_cuda_to_mpi_read.c  08_cudamemcpy_to_mpi.c  09_cudamemcpy_default.c  10_cudahostalloc.c  11_cuda_to_mpi_struct_of_buff.c  11_struct_of_buff.c  12_struct_ptr.c  13_struct_recursion.c  14_cuda_functor.c  15_cuda_memset_sync.c  15_cuda_memset_sync_nonblocking.c  17_cuda_stream_query_busy_loop.c  18_cuda_event_query_busy_loop.c  18_cuda_event_with_flags_query_busy_loop.c  18_cuda_to_mpi_event_query_busy_loop.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync_nonblocking.c  19_cuda_to_mpi_send_cudaMemcpyAsyncH2H_implicit_sync.c  20_cuda_default_stream_sync.c  20_cuda_to_mpi_send_ds_sync_w_r.c  21_chunked_streams_example.c  22_cuda_to_mpi_partial_buff_write.c  23_cuda_default_stream_post_sync.c  23_cuda_default_stream_post_sync_nonblocking.c  24_cuda_sync_stream_default_nonblocking.c  25_cuda_default_stream_double_sync.c  26_malloc_pitch.c  28_cuda_memset2d_implicit_syn.c  29_tsan_cuda_to_mpi.c  30_tsan_annotate_cuda_to_mpi.c  31_tsan_cuda_event.c  32_tsan_async_copy.c  33_tsan_wait_event.c  34_test_sync_callback.c  (+4 more)
test/runtime/: 02_event.c  03_cuda_to_mpi.c  04_mpi_to_cuda.c  05_cuda_to_mpi_stream.c  06_cuda_to_mpi_event.c  07_cuda_to_mpi_read.c  08_cudamemcpy_to_mpi.c  09_cudamemcpy_default.c  10_cudahostalloc.c  11_cuda_to_mpi_struct_of_buff.c  11_struct_of_buff.c  12_struct_ptr.c  13_struct_recursion.c  14_cuda_functor.c  15_cuda_memset_sync.c  15_cuda_memset_sync_nonblocking.c  16_cuda_hostalloc_implicit_sync.c  16_cuda_malloc_implicit_sync.c  17_cuda_stream_query_busy_loop.c  18_cuda_event_query_busy_loop.c  18_cuda_event_with_flags_query_busy_loop.c  18_cuda_to_mpi_event_query_busy_loop.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync.c  19_cuda_cudaMemcpyAsyncH2H_implicit_sync_nonblocking.c  19_cuda_to_mpi_send_cudaMemcpyAsyncH2H_implicit_sync.c  20_cuda_default_stream_sync.c  20_cuda_to_mpi_send_ds_sync_w_r.c  21_chunked_streams_example.c  22_cuda_to_mpi_partial_buff_write.c  23_cuda_default_stream_post_sync.c  23_cuda_default_stream_post_sync_nonblocking.c  24_cuda_sync_stream_default_nonblocking.c  25_cuda_default_stream_double_sync.c  26_malloc_pitch.c  27_cuda_memcpy2d_implicit_syn.c  28_cuda_memset2d_implicit_syn.c  29_tsan_cuda_to_mpi.c  30_tsan_annotate_cuda_to_mpi.c  31_tsan_cuda_event.c  32_tsan_async_copy.c  (+4 more)
